assets/scss/custom.scss
// Import Tailwind base styles
@tailwind base;
@tailwind components;
@tailwind utilities;

// Custom bg colors
.light-bg {
  @apply bg-slate-50;
}

.dark-bg {
  @apply bg-slate-900;
}

// Custom styles for links
a, .dark-bg a {
  @apply text-indigo-400 no-underline transition duration-300 ease-in-out font-bold;
}

a:hover, .dark-bg a:hover {
  @apply text-indigo-600;
}

a:active, .dark-bg a:active {
  @apply text-indigo-400;
}

.content a, .light-bg a {
  @apply text-indigo-600 no-underline transition duration-300 ease-in-out font-bold;
}

.content a:hover, .light-bg a:hover {
  @apply text-indigo-800;
}

.content a:active, .light-bg a:active {
  @apply text-indigo-800;
}

/* Ensure button text color remains slate-50 for links styled as buttons */
a.btn, a.btn-primary {
  @apply text-slate-50 font-semibold;
}

a.btn:hover, a.btn-primary:hover {
  @apply text-slate-50 font-semibold;
}

a.btn:active, a.btn-primary:active {
  @apply text-slate-50 font-semibold;
}

a.btn-secondary {
  @apply text-slate-900;
}

a.btn-secondary:hover {
  @apply text-slate-50;
}

a.btn-secondary:active {
  @apply text-slate-50;
}

/* Override for buttons in dark background contexts */
.dark-bg .btn, .dark-bg .btn-primary {
  @apply text-slate-50;
}

.dark-bg .btn:hover, .dark-bg .btn-primary:hover {
  @apply text-slate-50;
}

.dark-bg .btn:active, .dark-bg .btn-primary:active {
  @apply text-slate-50;
}

// Optional: special styles for links in specific sections or contexts
.featured a {
  @apply text-orange-500; // Orange text for links in the 'featured' section
}

h1,
h2,
h3,
h4,
h5,
h6 {
  @apply font-secondary font-bold leading-tight text-slate-900 dark:text-darkmode-dark;
}

.privacy h2 {
  @apply text-3xl my-6 font-secondary leading-relaxed font-bold text-slate-900 dark:text-darkmode-dark;
}

.privacy h3 {
  @apply text-2xl my-4 font-secondary leading-relaxed font-bold text-slate-900 dark:text-darkmode-dark;
}

.content-box {
  @apply rounded-lg xl:w-2/5 bg-white dark:bg-darkmode-theme-light p-10 border border-indigo-100;
}

.content-box p {
  @apply m-0 mb-4 leading-relaxed;
}

.narrow-content-box {
  @apply rounded-lg md:w-2/5 xl:w-1/4 bg-white dark:bg-darkmode-theme-light border p-10 border-indigo-100;
}

.narrow-content-box p {
  @apply m-0 mb-4 leading-relaxed;
}

.portfolio-box {
  @apply rounded-lg md:w-2/5 xl:w-1/4 bg-white dark:bg-darkmode-theme-light border border-indigo-100;
}

// Newlsetter modal animation
/* Add animation keyframes */
@keyframes slideInFromBottom {
  0% {
    transform: translateY(100%);
  }
  100% {
    transform: translateY(0);
  }
}

/* Apply animation to the modal only on md screens and larger */
@media (min-width: 768px) {
  .slide-in-md {
    animation: slideInFromBottom 0.5s ease forwards;
  }
}

.highlight {
  @apply bg-slate-300 border-l-4 border-slate-500 p-4;
}

.site-logo {
  @apply py-1 md:w-28 w-20
}

